cmake_minimum_required(VERSION 3.27)
project(SWT11022_LabPractice C)

set(CMAKE_C_STANDARD 11)

add_executable(SWT11022_LabPractice
        Labsheet02/labsheet02-04.c
        Labsheet02/labsheet02-05.c
        Labsheet02/labsheet02-06.c
        Labsheet02/labsheet02-2.c
        Labsheet02/labsheet02-3book.c
        Labsheet02/labsheet02.c
        Labsheet02/labsheet03-c.c
        LabWeek03/task01.c
        LabWeek03/task02.c
        LabWeek03/task03.c
        LabWeek04/practical1-1.c
        LabWeek04/practical1-2.c
        LabWeek04/practical2-1.c
        LabWeek04/practical2-2.c
        LabWeek04/practical3-1.c
        LabWeek04/practical3-2.c
        LabWeek04/task01.c
        LabWeek05/practical1.c
        LabWeek05/practical2.c
        LabWeek05/practical3.c
        LabWeek05/task01.c
        LabWeek05/task02.c
        LabWeek05/task03.c
        LabWeek05/task04.c
        LabWeek05/task05.c
        LabWeek06/practical02.c
        LabWeek06/practical1.c
        LabWeek06/task01.c
        LabWeek06/task02.c
        LabWeek06/task03.c
        LabWeek07/practical01.c
        LabWeek07/practical02.c
        LabWeek07/practical03.c
        LabWeek07/practical04-even-num.c
        LabWeek07/practical04-odd-num.c
        LabWeek07/task01.c
        LabWeek07/task02.c
        LabWeek07/task03.c
        LabWeek07/task04.c
        LabWeek07/task05.c
        LabWeek08/practical01.c
        LabWeek08/practical02.c
        LabWeek08/practical03.c
        LabWeek08/Task01.c
        LabWeek08/Task02.c
        LabWeek08/Task03.c
        LabWeek10/Exercise01.c
        LabWeek10/Exercise02.c
        LabWeek10/Exercise03.c
        LabWeek10/Exercise04.c
        LabWeek10/printingarrayusingforloop.c)
